2014-03-28      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.

2014-03-16      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many more improvements to pgeplayback.py
	  and twoDsim.mod.

2014-03-15      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  more changes to the shared library example.
	* gm2/gm2-libs/gdbif.mod:  New file.
	* gm2/gm2-libs/gdbif.def:  New file.

2014-02-25      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  huge amount of changes to expose the frame
	  buffer to python/pygame.

2014-02-19      Gaius Mulley <gaius@gnu.org>

	* libgm2/libiso/Makefile.in:  added MemStream.def and MemStream.mod
	  in list of modules to be built and installed.
	* gm2/gm2-libs-iso/MemStream.def:  New file.
	* gm2/gm2-libs-iso/MemStream.mod:  New file.

2014-02-17      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/Storage.mod:  fixed bug reported by
          reported by Michael Riedl <udo-michael.riedl@t-online.de>.
	  DEALLOCATE should assign the pointer to NIL.

2014-02-11      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/pge.py:  tidied up formatting.
	* gm2/gm2-compiler/M2GenGCC.mod:  CanConvert (New procedure function).
	  CodeCast checks to see if non same sized types can be converted
	  and generates an error message if they cannot.
	* gm2/gm2.texi:  corrected documentation to use libtool when building
	  shared libraries.  Updated references to jessie, rather than wheezy.
	  Updated gcc graft to 4.7.4.
	* gm2/www/tools/texi2tr/html/download.html:  update to stable release
	  gm2-1.1.1.
	* gm2/www/tools/texi2tr/html/release.html:  update to stable release
	  gm2-1.1.1.
	* testsuite/gm2/iso/pass/realbitscast.mod:  simplified test code.

2014-01-26      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Quads.mod:  MakeLengthConst new procedure
	  function.   BuildLengthFunction use MakeLengthConst.
	  AssignHighField check for conststring and call MakeLengthConst.